--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   ],
   "dependencies": {
     "load-grunt-tasks": "^0.4.0",
-    "fontello-update": "^0.5.0",
-    "async": "^0.8.0"
+    "fontello-update": "^0.5.0"
   }
 }
