--- a/package.json
+++ b/package.json
@@ -35,7 +35,12 @@
     "grunt": "~0.4.5"
   },
   "keywords": [
-    "grunt, fontello, fontello update, icon fonts, fontawesome"
+    "grunt",
+    "gruntplugin",
+    "fontello",
+    "fontello update",
+    "icon fonts",
+    "fontawesome"
   ],
   "dependencies": {
     "load-grunt-tasks": "^0.4.0",
