--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "test": ""
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt": "~0.4.5"
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-clean": "*",
+    "grunt": "*"
   },
   "peerDependencies": {
-    "grunt": "~0.4.5"
+    "grunt": "~0.4.x"
   },
   "keywords": [
     "grunt",
@@ -43,7 +43,10 @@
     "fontawesome"
   ],
   "dependencies": {
-    "load-grunt-tasks": "^0.4.0",
-    "fontello-update": "^0.6.0"
+    "load-grunt-tasks": "~3.0.0",
+    "fontello-update": "~0.6.1",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.11.0"
   }
 }
