original dependencies restored for pull request

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   ],
   "dependencies": {
     "load-grunt-tasks": "~3.0.0",
-    "fontello-update": "erdii/fontello-update",
+    "fontello-update": "~0.6.1",
     "grunt-contrib-clean": "~0.6.0",
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.11.0"
