--- a/package.json
+++ b/package.json
@@ -2,37 +2,29 @@
   "name": "grunt-fontello-update",
   "description": "Grunt task for updating Fontello files.",
   "version": "1.0.1",
-  "homepage": "https://github.com/reimund/",
-  "author": {
-    "name": "Reimund Trost",
-    "email": "reimund@code7.se"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/reimund/grunt-fontello-update.git"
-  },
-  "bugs": {
-    "url": "https://github.com/reimund/grunt-fontello-update/issues/"
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/reimund/grunt-fontello-update/blob/master/LICENSE-MIT"
-    }
-  ],
+  "homepage": "https://github.com/reimund/grunt-fontello-update",
+  "author": "Reimund Trost <reimund@code7.se>",
+  "repository": "reimund/grunt-fontello-update",
+  "bugs": "https://github.com/reimund/grunt-fontello-update/issues/",
+  "license": "MIT",
   "engines": {
     "node": ">= 0.8.0"
   },
+  "main": "tasks/fontello-update.js",
   "scripts": {
-    "test": ""
+    "test": "grunt test"
+  },
+  "dependencies": {
+    "fontello-update": "^0.6.2"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "*",
-    "grunt-contrib-clean": "*",
-    "grunt": "*"
+    "load-grunt-tasks": "^3.5.2",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt": "^1.0.1"
   },
   "peerDependencies": {
-    "grunt": ">=0.4.0"
+    "grunt": ">=0.4.5"
   },
   "keywords": [
     "grunt",
@@ -41,12 +33,5 @@
     "fontello update",
     "icon fonts",
     "fontawesome"
-  ],
-  "dependencies": {
-    "load-grunt-tasks": "~3.0.0",
-    "fontello-update": "~0.6.2",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.11.0"
-  }
+  ]
 }
